--- a/src/data/featured_data.css
+++ b/src/data/featured_data.css
@@ -1,6 +1,6 @@
 .featured-data-display .nav-pills .nav-link.active {
   border-radius: 0;
-  background-color: #f27421;
+  background-color: #CA4D00;
 }
 
 .featured-data-tab {
