--- a/src/home_page/section_header.css
+++ b/src/home_page/section_header.css
@@ -1,5 +1,5 @@
 .home-page .section-header {
-  border-bottom: 1px solid #f27421;
+  border-bottom: 1px solid #CA4D00;
   margin-bottom: 1em;
   margin-top: 4em;
 }
