--- a/src/search/active_facets.css
+++ b/src/search/active_facets.css
@@ -7,7 +7,7 @@
   padding: 0.2em 0.5em;
   margin: 0.2em 0.5em 0.2em 0;
   background: white;
-  border: 1px solid #f27421;
+  border: 1px solid #CA4D00;
   font-size: 0.8rem;
 }
 .active-facet .fa {
