--- a/src/welcome_modal.css
+++ b/src/welcome_modal.css
@@ -8,7 +8,7 @@
 }
 .ReactModal__Overlay  .fa-times-circle-o:hover {
   cursor: pointer;
-  color: #f27421;
+  color: #CA4D00;
 }
 .ReactModal__Overlay  .fa-times-circle-o {
   float: right;
