--- a/src/header.css
+++ b/src/header.css
@@ -1,3 +1,7 @@
+.header-wrap {
+  padding-left: 3rem!important;
+  padding-right: 3rem!important;
+}
 .header-wrap .fa-bars {
   font-weight: 300;
   font-size: 2em;
