--- a/src/home_page/image_carousel.css
+++ b/src/home_page/image_carousel.css
@@ -56,6 +56,15 @@
   background-size: cover;
 }
 
+.image-carousel .slide.decarbonization-slide  {
+  padding: 0px 60px 25px 0;
+}
+
+.image-carousel .slide.decarbonization-slide .image {
+  background-position: right center;
+  background-size: contain;
+}
+
 .image-carousel .slide.climate-change-data-slide  {
   padding: 0px 60px 25px 0;
 }
